--- a/policies/policy-multitenant-rbac-groups.yaml
+++ b/policies/policy-multitenant-rbac-groups.yaml
@@ -2,7 +2,7 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
   name: multitenant-rbac-groups
-  namespace: default
+  namespace: acm-policies
   annotations:
     policy.open-cluster-management.io/categories: Securité infrastructure
     policy.open-cluster-management.io/controls: Configurations
