--- a/channel.yaml
+++ b/channel.yaml
@@ -2,7 +2,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Channel
 metadata:
   name: multitenant-rbac
-  namespace: acm-channels
+  namespace: open-cluster-management
   annotations:
     apps.open-cluster-management.io/reconcile-rate: high
     apps.open-cluster-management.io/webhook-enabled: "true"
