--- a/policies/policy-multitenant-rbac-roles.yaml
+++ b/policies/policy-multitenant-rbac-roles.yaml
@@ -74,7 +74,7 @@ spec:
           severity: low
           namespaceSelector:
             include: 
-            - "integrations-prod"
+            - "integrations-preprod"
           object-templates:
             - complianceType: musthave
               objectDefinition:
@@ -85,7 +85,7 @@ spec:
                   name: demo-rbac-binding-testeurs-preprod-admin
                 subjects:
                   - kind: Group
-                    name: demo-rbac-operations
+                    name: demo-rbac-testeurs
                 roleRef:
                   apiGroup: rbac.authorization.k8s.io
                   kind: ClusterRole
