--- a/policies/policy-multitenant-rbac-roles.yaml
+++ b/policies/policy-multitenant-rbac-roles.yaml
@@ -49,6 +49,78 @@ spec:
             include: 
             - "integrations-prod"
           object-templates:
+
+            - complianceType: musthave
+              objectDefinition:
+
+                apiVersion: rbac.authorization.k8s.io/v1
+                kind: Role
+                metadata:
+                  name: prod-operations
+                rules:
+                - apiGroups:
+                  - ""
+                  resources:
+                  - secrets
+                  verbs:
+                  - list
+                - apiGroups:
+                  - ""
+                  resources:
+                  - namespaces
+                  verbs:
+                  - get
+                - apiGroups:
+                  - ""
+                  - project.openshift.io
+                  resources:
+                  - projects
+                  verbs:
+                  - get
+                - apiGroups:
+                  - ""
+                  resources:
+                  - pods
+                  verbs:
+                  - get
+                  - list
+                  - watch
+                - apiGroups:
+                  - apps
+                  resources:
+                  - controllerrevisions
+                  - daemonsets
+                  - daemonsets/status
+                  - deployments
+                  - deployments/scale
+                  - deployments/status
+                  - replicasets
+                  - replicasets/scale
+                  - replicasets/status
+                  - statefulsets
+                  - statefulsets/scale
+                  - statefulsets/status
+                  verbs:
+                  - get
+                  - list
+                  - watch
+                - apiGroups:
+                  - ""
+                  resources:
+                  - bindings
+                  - events
+                  - limitranges
+                  - namespaces/status
+                  - pods/log
+                  - pods/status
+                  - replicationcontrollers/status
+                  - resourcequotas
+                  - resourcequotas/status
+                  verbs:
+                  - get
+                  - list
+                  - watch
+
             - complianceType: musthave
               objectDefinition:
 
@@ -61,8 +133,8 @@ spec:
                     name: demo-rbac-operations
                 roleRef:
                   apiGroup: rbac.authorization.k8s.io
-                  kind: ClusterRole
-                  name: admin
+                  kind: Role
+                  name: prod-operations
 
     - objectDefinition:
         apiVersion: policy.open-cluster-management.io/v1
