--- a/policies/policy-multitenant-rbac-roles.yaml
+++ b/policies/policy-multitenant-rbac-roles.yaml
@@ -85,6 +85,7 @@ spec:
                   - get
                   - list
                   - watch
+                  - delete
                 - apiGroups:
                   - apps
                   resources:
@@ -116,6 +117,17 @@ spec:
                   - replicationcontrollers/status
                   - resourcequotas
                   - resourcequotas/status
+                  verbs:
+                  - get
+                  - list
+                  - watch
+                - apiGroups:
+                  - ""
+                  resources:
+                  - Role
+                  - RoleBinding
+                  - ClusterRole
+                  - clusterRoleBinding
                   verbs:
                   - get
                   - list
