--- a/policies/policy-multitenant-rbac-roles.yaml
+++ b/policies/policy-multitenant-rbac-roles.yaml
@@ -122,7 +122,7 @@ spec:
                   - list
                   - watch
                 - apiGroups:
-                  - ""
+                  - rbac.authorization.k8s.io
                   resources:
                   - Role
                   - RoleBinding
