--- a/policies/policy-multitenant-rbac-roles.yaml
+++ b/policies/policy-multitenant-rbac-roles.yaml
@@ -138,7 +138,7 @@ spec:
                   - list
                   - watch
 
-            - complianceType: musthave
+            - complianceType: mustonlyhave
               objectDefinition:
 
                 kind: RoleBinding
