--- a/policies/policy-multitenant-rbac-roles.yaml
+++ b/policies/policy-multitenant-rbac-roles.yaml
@@ -21,6 +21,7 @@ spec:
           namespaceSelector:
             include: 
             - "integrations-dev"
+            - "tenant*-dev"
           object-templates:
             - complianceType: musthave
               objectDefinition:
